fixed iOS z-index bus

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -99,4 +99,6 @@
   right: 3%;
   z-index: 99;
   opacity: 0.6;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: translateZ(99px);
 }
